Implemented little bit faster automorphisms